lesson64/vaia-l64/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vaia-prod
  labels:
    name: vaia-prod
    managed-by: l64-cd
