lesson64/vaia-l64/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vaia-agent-service
  namespace: vaia-prod
  labels:
    app: vaia-agent
spec:
  selector:
    app: vaia-agent
  type: ClusterIP
  ports:
    - name: http
      port: 8000
      targetPort: 8000
      protocol: TCP
